Loop time optimizations and realtime efforts