@@ -52,6 +52,13 @@ deploy {
 							"-Dcom.sun.management.jmxremote.authenticate=false",
 							"-Djava.rmi.server.hostname=${TEAMIP}"
 							]
+			} else {
+// 				jvmArgs = [ "-XX:+UseG1GC",
+// 							"-XX:MaxGCPauseMillis=10"
+// 							]
+				jvmArgs = [ "-XX:+UseConcMarkSweepGC",
+							"-XX:MaxGCPauseMillis=10"
+							]
 			}
         }
         // Built in artifact to deploy arbitrary files to the roboRIO.
